--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./src ./tests",
     "build": "NODE_ENV=production webpack --progress",
-    "test": "NODE_ENV=testing jest --coverage --ci --runInBand && cat ./coverage/lcov.info | coveralls",
+    "test": "NODE_ENV=testing jest --coverage --ci --runInBand",
     "test:watch": "NODE_ENV=test jest --watch",
     "profile": "webpack --json | webpack-bundle-size-analyzer"
   },
