--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint ./src ./tests",
+    "fix-lint": "eslint ./src ./tests --fix",
     "build": "NODE_ENV=production webpack --progress",
     "test": "NODE_ENV=testing jest --coverage --ci --runInBand",
     "test:watch": "NODE_ENV=test jest --watch",
